# bot-master-xl

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README-zh_CN.md  README.md  README_EN.md  count.py  strip_symbols.sh
lib/RakNet/: CMakeLists.txt
lib/RakNet/src/: BigTypes.h  InternalPacketPool.cpp  InternalPacketPool.h  RPCMap.cpp  RakClient.cpp  RakClientInterface.h  RakPeer.cpp  RakPeer.h  Rand.cpp  ReliabilityLayer.cpp  SocketLayer.cpp  SocketLayer.h  Types.h
lib/RakNet/src/SAMP/: SAMPRPC.cpp  samp_netencr.cpp  samp_netencr.h
src/: CApp.cpp  CApp.h  authKey.cpp  authKey.h  main.cpp  samp.h  singal.h
src/core/: CAPIServer.cpp  CAPIServer.h  CConfig.cpp  CConfig.h  CConsole.cpp  CConsole.h  CConsoleCommands.cpp  CConsoleCommands.h  CLLMBotSessionManager.cpp  CLLMBotSessionManager.h  CLogger.cpp  CLogger.h  CPersistentDataStorage.cpp  CPersistentDataStorage.h  CServerQuerier.cpp  CServerQuerier.h  CSharedResourcePool.cpp  CSharedResourcePool.h  CStreamableResourcePool.cpp  CStreamableResourcePool.h
src/database/: DBSchema.h  querybuilder.h
src/models/: CBot.cpp  CBot.h  CConnectionQueue.cpp  CConnectionQueue.h  CLLMBotSession.cpp  CLLMBotSession.h  CLLMProvider.cpp  CLLMProvider.h  CRakBot.cpp  CRakBot.h  CServer.cpp  CServer.h
src/physics/: CPathFinder.cpp  CPathFinder.h  Raycast.cpp  Raycast.h
src/services/: CBaseService.cpp  CBaseService.h  CBotService.cpp  CBotService.h  CDashboardService.cpp  CDashboardService.h  CLLMProviderService.cpp  CLLMProviderService.h  CServerService.cpp  CServerService.h
src/tools/: BotLLMTools.cpp  BotLLMTools.h  MemoryTools.cpp  MemoryTools.h  SelfStatusTools.cpp  SelfStatusTools.h  SituationAwarenessTools.cpp  SituationAwarenessTools.h  ToolHelpers.cpp  ToolHelpers.h  WorldInteractionTools.cpp  WorldInteractionTools.h  tool_builder.cpp  tool_builder.h
src/utils/: CFunctionDispatcher.cpp  CFunctionDispatcher.h  GetTickCount.cpp  GetTickCount.h  JsonResponse.cpp  JsonResponse.h  ObjectNameUtil.cpp  ObjectNameUtil.h  TextConverter.cpp  TextConverter.h  UUIDUtil.h  VehicleNameUtil.cpp  VehicleNameUtil.h  bit_manipulation.h  defines.h  map_zones.cpp  map_zones.h  math_function.cpp  math_function.h  timeutil.cpp  timeutil.h  uuid.h  weapon_config.cpp  weapon_config.h  wintypes.h
src/utils/ds/: Trie.cpp  Trie.h
